--- a/angular-frontend/src/app/projects-page/new-project-page/new-project-page.component.html
+++ b/angular-frontend/src/app/projects-page/new-project-page/new-project-page.component.html
@@ -12,7 +12,7 @@
         formControlName="name"
         placeholder="Enter project name"
         class="form-input"
-      >
+        >
     </div>
 
     <!-- Description -->
@@ -36,7 +36,7 @@
           type="date"
           formControlName="startDate"
           class="form-input"
-        >
+          >
       </div>
 
       <div class="form-group half">
@@ -46,7 +46,7 @@
           type="date"
           formControlName="dueDate"
           class="form-input"
-        >
+          >
       </div>
     </div>
 
@@ -55,9 +55,11 @@
       <label for="category" class="form-label">Task Categories</label>
       <select id="category" formControlName="category" class="form-select">
         <option value="">Select a category</option>
-        <option *ngFor="let category of taskCategories" [value]="category">
-          {{category}}
-        </option>
+        @for (category of taskCategories; track category) {
+          <option [value]="category">
+            {{category}}
+          </option>
+        }
       </select>
     </div>
 
@@ -70,7 +72,7 @@
             type="radio"
             formControlName="completionStatus"
             value="ongoing"
-          >
+            >
           <span>Ongoing</span>
         </label>
         <label class="radio-label">
@@ -78,7 +80,7 @@
             type="radio"
             formControlName="completionStatus"
             value="completed"
-          >
+            >
           <span>Completed</span>
         </label>
       </div>
